--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,6 +1,6 @@
 body {
     border: 10px solid orange;
-    background-color: pink;
+    background-color: green;
     background-color: black;
 
     }
