--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,5 +1,5 @@
 body {
-    border: 10px solid orange;
+    border: 10px solid yellow;
     background-color: green;
     background-color: black;
 
